feat(pedidos): DTOs y servicios consistentes, subtotal calculado por BD, controllers limpios